fixed flex spacing

--- a/style/style.scss
+++ b/style/style.scss
@@ -151,7 +151,7 @@ label {
   .tile-grid {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 
     @include breakpoint(break) {
       flex-direction: row;
